# avs

./: .gitignore  Dockerfile  README.md  benchmarks.md  build_avs.sh  pyproject.toml  requirements.txt
avs/: avs.py  srt_parser.py  srt_utils.py  translation.py  voice_over.py
resources/transcriptions/: anestesia.txt  yeast.srt
src/avs/: __init__.py  srt_parser.py  voice_over.py
