[project]
name = "avs"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Gabriel Tiso", email = "gabriel.tiso@proton.me" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">=3.10,<3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
